@@ -7,3 +7,9 @@ muzzle {
     coreJdk()
   }
 }
+
+tasks.withType<Test>().configureEach {
+  // required on jdk17
+  jvmArgs("--add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED")
+  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
+}
